--- a/choisir_viande.html
+++ b/choisir_viande.html
@@ -48,29 +48,18 @@
       <div class="top-nav s-12 l-10">
 
         <ul class="right chevron">
-          <li><a href="index.html">Accueil</a></li>
-          <li><a href="#contact">Contact</a></li>
-          <!--<li><a>Location Véhicule</a>
-              <ul>
-                <li><a>Service 1</a>
-                  <ul>
-                    <li><a>Service 1 A</a></li>
-                    <li><a>Service 1 B</a></li>
-                  </ul>
-                </li>
-                <li><a>Service 2</a></li>
-              </ul>
-            </li>-->
+          <li><a href="index.html">Accueil</a></li> 
+          <li><a href="index.html#livraison">Livraison à domicile</a></li>
           <li><a href="index.html#a_propos">A propos</a></li>
           <li><a href="index.html#gallerie_photos">Photos</a></li>
+          <li><a href="index.html#contact">Contact</a></li>
           <li><a href="reservation-vehicule.html">Location Véhicule</a></li>
           <li><a href="choisir_viande.html">Choisir ses morceaux</a></li>
           <li><a href="https://www.facebook.com/">Conseils recettes</a></li>
-          <li><a href="index.html#livraison">Livraison à domicile</a></li>
-
         </ul>
       </div>
     </nav>
+    
   </header>
 
   <!-- MAIN -->
