--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
 
     <section>
-      <hr>
+      <hr width="80%">
         <div style="text-align: center;">
           <i class="icon-sli-handbag icon3x text-dark center margin-bottom-30"></i>
         </div>
@@ -173,7 +173,11 @@
 
     </section>
 
-    <hr>
+    <hr width="80%">
+
+    <div class="couteau">
+      <img src="img/couteau_boucher_pendu.png" alt="">
+    </div>
 
     <!-- Section 1 -->
     <section class="section">
@@ -206,7 +210,7 @@
       </div>
     </section>
 
-    <hr>
+    <hr width="80%">
 
     <!-- Section 2 -->
     <section class="full-width">
@@ -256,7 +260,7 @@
       </div>
     </section>
 
-    <hr>
+    <hr width="80%">
 
     <!-- Section 4 -->
     <section class="section-top-padding full-width">
