--- a/index.html
+++ b/index.html
@@ -175,10 +175,6 @@
 
     <hr width="80%">
 
-    <div class="couteau">
-      <img src="img/couteau_boucher_pendu.png" alt="">
-    </div>
-
     <!-- Section 1 -->
     <section class="section">
       <div style="text-align: center;">
@@ -598,12 +594,16 @@
     </section>
   </main>
 
+  <hr width="80%">
+
   <!-- FOOTER -->
   <footer>
     <!-- Contact Us -->
     <div class="background-primary padding text-center">
       <p id="contact" class="h1" style="color: black;"> Contactez nous: 02.43.90.61.17</p>
     </div>
+
+    <hr width="80%">
 
     <!-- Main Footer -->
     <section class="background-dark full-width">
