--- a/choisir_viande.html
+++ b/choisir_viande.html
@@ -151,7 +151,7 @@
 
         </div>
       </section>
-      <hr>
+      <hr width="80%">
     </article>
 
     <article>
@@ -190,7 +190,7 @@
 
       </section>
 
-      <hr>
+      <hr width="80%">
 
     </article>
 
@@ -232,20 +232,25 @@
     </article>
   </main>
 
+  
+  <hr width="80%">
+
   <!-- FOOTER -->
   <footer>
     <!-- Contact Us -->
     <div class="background-primary padding text-center">
-      <p class="h1">Contact Us: 0800 787 787</p>
+      <p id="contact" class="h1" style="color: black;"> Contactez nous: 02.43.90.61.17</p>
     </div>
+
+    <hr width="80%">
 
     <!-- Main Footer -->
     <section class="background-dark full-width">
       <!-- Map -->
       <div class="s-12 m-12 l-6 margin-m-bottom-2x">
-        <div class="s-12 grayscale center">
+        <div class="s-12 Color center">
           <iframe
-            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1459734.5702753505!2d16.91089086619977!3d48.577103681657675!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ssk!2ssk!4v1457640551761"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1141.57971601374!2d-0.4776687274766103!3d48.04026973329755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48084d0a7ca2f3f3%3A0x31d3d34b0a101ee0!2sFouion!5e1!3m2!1sfr!2sfr!4v1624625262913!5m2!1sfr!2sfr"
             width="100%" height="450" frameborder="0" style="border:0"></iframe>
         </div>
       </div>
@@ -258,9 +263,9 @@
               <i class="icon-sli-location-pin text-primary icon3x"></i>
             </div>
             <div class="margin-left-70 margin-bottom-30">
-              <h3 class="margin-bottom-0">Company Address</h3>
-              <p>Responsive Street 7<br>
-                London / United Kingdom / Europe
+              <h3 class="margin-bottom-0">Adresse</h3>
+              <p>2 route du Mans<br>
+                53480 VAIGES
               </p>
             </div>
             <div class="float-left">
@@ -268,18 +273,15 @@
             </div>
             <div class="margin-left-70 margin-bottom-30">
               <h3 class="margin-bottom-0">E-mail</h3>
-              <p>contact@sampledomain.com<br>
-                office@sampledomain.com
+              <p>foulon-sebastien@orange.fr<br>
               </p>
             </div>
             <div class="float-left">
               <i class="icon-sli-phone text-primary icon3x"></i>
             </div>
             <div class="margin-left-70">
-              <h3 class="margin-bottom-0">Phone Numbers</h3>
-              <p>0800 4521 800 50<br>
-                0450 5896 625 16<br>
-                0798 6546 465 15
+              <h3 class="margin-bottom-0">Téléphone</h3>
+              <p>02.43.90.61.17
               </p>
             </div>
           </div>
@@ -291,12 +293,13 @@
     <!-- Bottom Footer -->
     <section class="padding background-dark full-width">
       <div class="s-12 l-6">
-        <p class="text-size-12">Copyright 2019, Vision Design - graphic zoo</p>
-        <p class="text-size-12">All images have been purchased from Bigstock. Do not use the images in your website.</p>
+        <p class="text-size-12">Copyright 2021, Bruno Motard Design - graphic zoo</p>
+        <p class="text-size-12">Toutes les images sont la propriété de Bruno Motard. Utiliser ces images serait
+          préjudiciable pour votre intégrité physique !</p>
       </div>
       <div class="s-12 l-6">
         <a class="right text-size-12" href="http://www.myresponsee.com"
-          title="Responsee - lightweight responsive framework">Design and coding<br> by Responsee Team</a>
+          title="Responsee - lightweight responsive framework">Design et Développement<br> by Bruno Motard</a>
       </div>
     </section>
   </footer>
