--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <div class="padding-2x block-bordered">
               <i class="icon-sli-tag icon3x text-dark center margin-bottom-30"></i>
               <h2 class="text-thin">Promo de la semaine</h2>
-              <button onclick="window.location.href = 'https://fr-fr.facebook.com/';">C'EST PAR ICI</button>
+              <button id="btn" onclick="window.location.href = 'https://fr-fr.facebook.com/';">C'EST PAR ICI</button>
 
             </div>
           </div>
@@ -146,7 +146,7 @@
             <div class="padding-2x block-bordered">
               <i class="icon-sli-calendar icon3x text-dark center margin-bottom-30"></i>
               <h2 class="text-thin">Evénements à venir</h2>
-              <button onclick="window.location.href = 'https://fr-fr.facebook.com/';">C'EST PAR ICI</button>
+              <button id="btn" onclick="window.location.href = 'https://fr-fr.facebook.com/';">C'EST PAR ICI</button>
 
             </div>
           </div>
