--- a/index.html
+++ b/index.html
@@ -31,9 +31,6 @@
 </head>
 
 <body class="size-1140">
-  <!-- PREMIUM FEATURES BUTTON -->
-  <!--<a target="_blank" class="hide-s" href="../template/eleganter-premium-responsive-business-template/" style="position:fixed;top:120px;right:-14px;z-index:10;"><img src="img/promotions.png" alt=""></a> -->
-  <!-- HEADER -->
   <header role="banner" class="position-absolute">
     <!-- Top Navigation -->
     <nav class="background-transparent background-transparent-hightlight full-width sticky">
@@ -68,7 +65,7 @@
     <!-- Main Header -->
     <header>
       <div>
-        <h2 id="index_2" hidden></h2>
+        <h2 id="index_2"></h2>
       </div>
       <div class="carousel-default owl-carousel carousel-main carousel-nav-white background-dark text-center">
         <div class="item">
@@ -374,7 +371,7 @@
               </a>
             </div>
             <div class="s-12 m-6 l-3">
-              <a class="image-with-hover-overlay image-hover-zoom" href="img/portfolio/thumb_viandes-prepa_3.jpg">
+              <a class="image-with-hover-overlay image-hover-zoom" href="img/portfolio/viandes-prepa_3.jpg">
                 <div class="image-hover-overlay background-primary">
                   <div class="image-hover-overlay-content text-center padding-2x">
                     
@@ -404,13 +401,13 @@
               </a>
             </div>
             <div class="s-12 m-6 l-3">
-              <a class="image-with-hover-overlay image-hover-zoom" href="img/portfolio/viandes-prepa_6.jpg">
+              <a class="image-with-hover-overlay image-hover-zoom" href="img/portfolio/viandes-prepa_9.jpg">
                 <div class="image-hover-overlay background-primary">
                   <div class="image-hover-overlay-content text-center padding-2x">
                     
                   </div>
                 </div>
-                <img src="img/portfolio/thumb_viandes-prepa_6.jpg" alt="" title="Portfolio Image 14" />
+                <img src="img/portfolio/thumb_viandes-prepa_9.jpg" alt="" title="Portfolio Image 14" />
               </a>
             </div>
             <div class="s-12 m-6 l-3">
