--- a/test_index.html
+++ b/test_index.html
@@ -71,7 +71,7 @@
             <hr>
           </div>
           <div class="line">
-            <h2 id="index_2" class="text-size-50  text-m-size-40 text-center">Reservation vehicule</h2>
+            <h2 id="a_propos" class="text-size-50  text-m-size-40 text-center">Reservation vehicule</h2>
             <hr class="break-small background-primary break-center">
           </div>
           <div class="centrage_reservation">
