--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
               <style>
                 ul {
                   list-style: none;
+                  padding-right: 1.2em;
                 }
               </style>
               <ul>
@@ -124,7 +125,9 @@
                   Dimanche 8H30-12H30
                 </li>
               </ul>
-              <p class="margin-bottom-30"><br> Pour en savoir plus, consultez notre page Facebook. </p>
+              <p class="margin-bottom-30"><br> Pour en savoir plus, consultez notre page 
+                <br>
+                <a target="_blank" href="https://fr-fr.facebook.com/"><h2><strong><b>---> Facebook <---</b></strong></h2></a></p>
 
             </div>
           </div>
